@@ -21,6 +21,7 @@ tree, and visa versa, i.e. allow trees to be inserted into a tree read in from a
 - Add an FAQ, whose first item explains using $ENV{DBI_DSN} etc to control the test database,
 and that DBD::SQLite is used by default.
 - Add code to File::Temp -> newdir(...) in tests to help run under BSD-based systems.
+- Add scripts/xml.demo.pl and scripts/store.xml.
 EOT
 
 [V 0.99]
