@@ -265,8 +265,10 @@ has performance penalties.
 
 =head1 PARAMETERS
 
+Parameters are used in the call to L<Tree::Persist/connect({%opts})> or L<Tree::Persist/create_datastore({%opts})>.
+
 In addition to any parameters required by its parent L<Tree::Persist::DB>, the following
-parameters are used by connect():
+parameters are used by C<connect()> or C<create_datastore()>:
 
 =over 4
 
