@@ -16,6 +16,7 @@ Revision history for Perl distribution Tree::Persist
 	- Add an FAQ, whose first item explains using $ENV{DBI_DSN} etc to control the test database,
 		and that DBD::SQLite is used by default.
 	- Add code to File::Temp -> newdir(...) in tests to help run under BSD-based systems.
+	- Add scripts/xml.demo.pl and scripts/store.xml.
 
 0.99  Mon Oct 31 10:30:00 2005
   - Split out from Forest
